--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,6 +1,12 @@
 @background_color: yellow;
 
-body {
-    background-color: @background_color;
-    z-index: 20;
+.stashCheckerPopup {
+    z-index: 999 !important;
+    position: absolute !important;
+    text-align: left !important;
+    background-color: white !important;
+    border: 0.1em solid black !important;
+    border-radius: 0.5em !important;
+    padding: 0.5em !important;
+    margin-top: -0.5em !important;
 }
