--- a/src/style/main.less
+++ b/src/style/main.less
@@ -4,6 +4,7 @@
     z-index: 999 !important;
     position: absolute !important;
     text-align: left !important;
+    font-size: medium !important;
     line-height: normal !important;
     background-color: white !important;
     border: 0.1em solid black !important;
