--- a/src/style/main.less
+++ b/src/style/main.less
@@ -3,6 +3,7 @@
 .stashCheckerPopup {
     z-index: 999 !important;
     position: absolute !important;
+    color: black !important;
     text-align: left !important;
     font-size: medium !important;
     line-height: normal !important;
