Fix matched stash link

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,6 +1,6 @@
 @background_color: yellow;
 
-.stashCheckerPopup {
+.stashCheckerTooltip {
     z-index: 999 !important;
     position: absolute !important;
     color: black !important;
