--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,8 +1,8 @@
 @background_color: yellow;
 
 .stashCheckerTooltip {
-    z-index: 999 !important;
-    position: absolute !important;
+    z-index: 9999 !important;
+    position: fixed !important;
     color: black !important;
     text-align: left !important;
     font-size: medium !important;
