Add nubiles and support for galleries

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -13,3 +13,7 @@
     padding: 0.5em !important;
     margin-top: -0.5em !important;
 }
+
+.stashCheckerSymbol {
+    font-size: inherit !important;
+}
