Improve tooltip style

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -14,6 +14,29 @@
     margin-top: -0.5em !important;
 }
 
+.stashCheckerTooltip hr {
+    margin-top: 0.5em !important;
+    margin-bottom: 0.5em !important;
+}
+
+.stashCheckerTooltip hr + br {
+    display: none !important;
+}
+
+.stashCheckerFile {
+    color: black !important;
+    text-align: left !important;
+    font-size: medium !important;
+    line-height: normal !important;
+    background-color: lightgrey !important;
+    margin: 0.5em !important;
+    padding: 0.5em !important;
+}
+
+.stashCheckerFile + br {
+    display: none !important;
+}
+
 .stashCheckerSymbol {
     font-size: inherit !important;
 }
