Split html classes

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -21,7 +21,7 @@
     }
 }
 
-.stashCheckerTooltip {
+.stashChecker.tooltip {
     z-index: 99999 !important;
     position: fixed !important;
     color: var(--stash-checker-color-text) !important;
@@ -35,29 +35,29 @@
     margin-top: -0.5em !important;
 }
 
-.stashCheckerTooltip a:link {
+.stashChecker.tooltip a:link {
     color: var(--stash-checker-color-text) !important;
 }
-.stashCheckerTooltip a:visited {
+.stashChecker.tooltip a:visited {
     color: var(--stash-checker-color-link-visited) !important;
 }
-.stashCheckerTooltip a:hover {
+.stashChecker.tooltip a:hover {
     color: var(--stash-checker-color-link-hover) !important;
 }
-.stashCheckerTooltip a:active {
+.stashChecker.tooltip a:active {
     color: var(--stash-checker-color-link-active) !important;
 }
-.stashCheckerTooltip hr {
+.stashChecker.tooltip hr {
     margin-top: 0.5em !important;
     margin-bottom: 0.5em !important;
     border-color: var(--stash-checker-color-card) !important;
 }
 
-.stashCheckerTooltip hr + br {
+.stashChecker.tooltip hr + br {
     display: none !important;
 }
 
-.stashCheckerFile {
+.stashChecker.file {
     text-align: left !important;
     font-size: medium !important;
     line-height: normal !important;
@@ -67,10 +67,10 @@
     background-color: var(--stash-checker-color-card) !important;
 }
 
-.stashCheckerFile + br {
+.stashChecker.file + br {
     display: none !important;
 }
 
-.stashCheckerSymbol {
+.stashChecker.checkmark {
     font-size: inherit !important;
 }
