--- a/src/style/main.less
+++ b/src/style/main.less
@@ -21,56 +21,103 @@
     }
 }
 
+.stashChecker {
+    color: var(--stash-checker-color-text);
+    text-align: left;
+    font-size: medium;
+    line-height: normal;
+    opacity: 1;
+}
+
 .stashChecker.tooltip {
-    z-index: 99999 !important;
-    position: fixed !important;
-    color: var(--stash-checker-color-text) !important;
-    text-align: left !important;
-    font-size: medium !important;
-    line-height: normal !important;
-    background-color: var(--stash-checker-color-bg) !important;
-    border: 0.1em solid var(--stash-checker-color-border) !important;
-    border-radius: 0.5em !important;
-    padding: 0.5em !important;
-    margin-top: -0.5em !important;
-}
-
-.stashChecker.tooltip a:link {
-    color: var(--stash-checker-color-text) !important;
-}
-.stashChecker.tooltip a:visited {
-    color: var(--stash-checker-color-link-visited) !important;
-}
-.stashChecker.tooltip a:hover {
-    color: var(--stash-checker-color-link-hover) !important;
-}
-.stashChecker.tooltip a:active {
-    color: var(--stash-checker-color-link-active) !important;
-}
-.stashChecker.tooltip hr {
-    margin-top: 0.5em !important;
-    margin-bottom: 0.5em !important;
-    border-color: var(--stash-checker-color-card) !important;
-}
-
-.stashChecker.tooltip hr + br {
-    display: none !important;
+    z-index: 99999;
+    position: fixed;
+    background-color: var(--stash-checker-color-bg);
+    border: 0.1em solid var(--stash-checker-color-border);
+    border-radius: 0.5em;
+    padding: 0.5em;
+    margin-top: -0.5em;
 }
 
 .stashChecker.file {
-    text-align: left !important;
-    font-size: medium !important;
-    line-height: normal !important;
-    margin: 0.5em !important;
-    padding: 0.5em !important;
-    color: var(--stash-checker-color-text) !important;
-    background-color: var(--stash-checker-color-card) !important;
+    margin: 0.5em;
+    padding: 0.5em;
+    background-color: var(--stash-checker-color-card);
+}
+
+.stashChecker.modal {
+    position: fixed;
+    z-index: 999999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); // fallback
+    background-color: rgba(0,0,0,0.4);
+}
+
+.stashChecker.settings {
+    margin: 20vh auto;
+    background-color: var(--stash-checker-color-bg);
+    border: 0.1em solid var(--stash-checker-color-border);
+    border-radius: 0.5em;
+    padding: 0.5em;
+    width: auto;
+}
+
+.stashChecker.endpoints {
+    display:flex;
+    flex-direction: column;
+    justify-content:space-between;
+    justify-items: flex-start;
+    align-items: stretch;
+}
+
+.stashChecker.endpoint {
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between;
+    justify-items: flex-start;
+    align-items: center;
+    width: 30em;
+    padding: 1em;
+    margin: 1em;
+    background-color: var(--stash-checker-color-card);
+}
+
+.stashChecker.endpoint button {
+    background-color: red;
+    height: 2em;
+    width: 4em;
+}
+
+.stashChecker.tooltip a:link {
+    color: var(--stash-checker-color-text);
+}
+.stashChecker.tooltip a:visited {
+    color: var(--stash-checker-color-link-visited);
+}
+.stashChecker.tooltip a:hover {
+    color: var(--stash-checker-color-link-hover);
+}
+.stashChecker.tooltip a:active {
+    color: var(--stash-checker-color-link-active);
+}
+.stashChecker.tooltip hr {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    border-color: var(--stash-checker-color-card);
+}
+
+.stashChecker.tooltip hr + br {
+    display: none;
 }
 
 .stashChecker.file + br {
-    display: none !important;
+    display: none;
 }
 
-.stashChecker.checkmark {
-    font-size: inherit !important;
+.stashCheckerCheckmark {
+    font-size: inherit;
 }
