--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -166,6 +166,7 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     border-color: var(--stash-checker-color-card);
+    background-color: var(--stash-checker-color-card);
 }
 
 .stashChecker.tooltip hr + br {
