--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -103,6 +103,13 @@
     margin: 0;
 }
 
+.stashChecker > .matchQuality {
+    width: 0.8em;
+    height: 0.8em;
+    display: inline-block;
+    border-radius: 50%;
+}
+
 .stashChecker.btn {
     display: inline-block;
     font-weight: 400;
