Add display options for checkmark and toolbox

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,6 +6,7 @@
     --stash-checker-color-link-hover: #039;
     --stash-checker-color-link-active: #039;
     --stash-checker-color-border: #323232;
+    --stash-checker-color-border-light: #989898;
     --stash-checker-color-bg: #ffffff;
     --stash-checker-color-card: #f2f2f2;
 }
@@ -18,6 +19,7 @@
         --stash-checker-color-link-hover: #f2f2f2;
         --stash-checker-color-link-active: #039;
         --stash-checker-color-border: #5a5a5a;
+        --stash-checker-color-border-light: #707070;
         --stash-checker-color-bg: #202020;
         --stash-checker-color-card: #464646;
     }
@@ -69,7 +71,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgb(0,0,0); // fallback
     background-color: rgba(0,0,0,0.4);
 }
@@ -80,16 +82,22 @@
     border: 0.1rem solid var(--stash-checker-color-border);
     border-radius: 0.5rem;
     padding: 0.5rem;
-    width: 35rem;
+    width: fit-content;
+    display: grid;
+    grid-gap: 1rem;
 }
 
-.stashChecker.settings h3 {
+.stashChecker.settings sub-heading {
     font-size: 1.25rem;
 }
 
 .stashChecker.settings .version {
     color: var(--stash-checker-color-text-light);
     font-size: 1.25rem;
+}
+
+.stashChecker.settingsSection {
+    width: 35rem;
 }
 
 .stashChecker.endpoints {
@@ -122,6 +130,42 @@
 
 .stashChecker.endpoint > div > * {
     margin: 0;
+}
+
+.stashChecker.heading {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.stashChecker fieldset {
+    border: 0.1rem solid var(--stash-checker-color-border-light);
+    border-radius: 0.5rem;
+    margin: 0.5rem 0 0.5rem 0;
+    padding: 0.5rem;
+}
+
+.stashChecker legend {
+    float: unset;
+    width: auto;
+    height: auto;
+    margin-left: 0.5rem;
+    margin-bottom: 0;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    line-height: unset;
+    font-size: unset;
+}
+
+.stashChecker .option {
+    text-align: right;
+    margin: 0.5rem;
+}
+
+.stashChecker .option > input {
+    margin-left: 0.5rem;
+}
+
+.stashChecker .option > label {
 }
 
 .stashChecker > .matchQuality {
