--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,7 +35,7 @@
 
 .stashChecker.sub-heading {
     font-size: 0.8rem;
-    margin: 0.5rem 0 0;
+    margin: 0.5rem 0 0.5rem;
 }
 
 .stashChecker.tooltip {
@@ -84,7 +84,7 @@
     padding: 0.5rem;
     width: fit-content;
     display: grid;
-    grid-gap: 1rem;
+    gap: 1rem;
 }
 
 .stashChecker.settings sub-heading {
@@ -100,18 +100,20 @@
     width: 35rem;
 }
 
-.stashChecker.endpoints {
-    display:flex;
-    flex-direction: column;
-    justify-content:space-between;
-    justify-items: flex-start;
-    align-items: stretch;
+.stashChecker.settingsSectionBody {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0.5rem;
 }
 
 .stashChecker.endpoint {
-    display:flex;
+    width: 100%;
+    display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content: space-between;
     justify-items: flex-start;
     align-items: center;
     padding: 1rem;
@@ -138,10 +140,12 @@
 }
 
 .stashChecker fieldset {
+    width: fit-content;
     border: 0.1rem solid var(--stash-checker-color-border-light);
     border-radius: 0.5rem;
     margin: 0.5rem 0 0.5rem 0;
     padding: 0.5rem;
+    flex-grow: 1;
 }
 
 .stashChecker legend {
