Add support for hobby.porn

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -50,6 +50,7 @@
 }
 
 .stashChecker.file {
+    position: inherit;
     margin: 0.5rem;
     padding: 0.5rem;
     background-color: var(--stash-checker-color-card);
