--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -72,7 +72,8 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden auto;
+    overscroll-behavior: contain;
     background-color: rgb(0,0,0); // fallback
     background-color: rgba(0,0,0,0.4);
 }
