Revised dark-mode invoking

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,7 +11,7 @@
     --stash-checker-color-card: #f2f2f2;
 }
 
-.dark-mode {
+.stashChecker-dark-mode {
     --stash-checker-color-text: #e0e0e0;
     --stash-checker-color-text-light: #707070;
     --stash-checker-color-link-visited: #c7c7c7;
