--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,18 +11,16 @@
     --stash-checker-color-card: #f2f2f2;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --stash-checker-color-text: #e0e0e0;
-        --stash-checker-color-text-light: #707070;
-        --stash-checker-color-link-visited: #c7c7c7;
-        --stash-checker-color-link-hover: #f2f2f2;
-        --stash-checker-color-link-active: #039;
-        --stash-checker-color-border: #5a5a5a;
-        --stash-checker-color-border-light: #707070;
-        --stash-checker-color-bg: #202020;
-        --stash-checker-color-card: #464646;
-    }
+.stashChecker-dark-mode {
+    --stash-checker-color-text: #e0e0e0;
+    --stash-checker-color-text-light: #707070;
+    --stash-checker-color-link-visited: #c7c7c7;
+    --stash-checker-color-link-hover: #f2f2f2;
+    --stash-checker-color-link-active: #039;
+    --stash-checker-color-border: #5a5a5a;
+    --stash-checker-color-border-light: #707070;
+    --stash-checker-color-bg: #202020;
+    --stash-checker-color-card: #464646;
 }
 
 .stashChecker {
@@ -74,8 +72,8 @@
     height: 100%;
     overflow: hidden auto;
     overscroll-behavior: contain;
-    background-color: rgb(0,0,0); // fallback
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(0, 0, 0); // fallback
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .stashChecker.settings {
@@ -184,6 +182,10 @@
     background-color: var(--stash-checker-color-bg);
 }
 
+.stashChecker .option > select {
+    margin-left: 0.5rem;
+}
+
 .stashChecker .option > label {
 }
 
@@ -207,30 +209,36 @@
     font-size: 1rem;
     line-height: 1.5;
     border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+
 .stashChecker.btn:not(:disabled):not(.disabled) {
     cursor: pointer;
 }
+
 .stashChecker.btn:hover {
     color: #212529;
     text-decoration: none;
 }
+
 .stashChecker.btn-primary {
     color: #fff;
     background-color: #137cbd;
     border-color: #137cbd;
 }
+
 .stashChecker.btn-primary:hover {
     color: #fff;
     background-color: #10659a;
     border-color: #0e5e8f;
 }
+
 .stashChecker.btn-danger {
     color: #fff;
     background-color: #db3737;
     border-color: #db3737;
 }
+
 .stashChecker.btn-danger:hover {
     color: #fff;
     background-color: #c82424;
@@ -240,15 +248,19 @@
 .stashChecker.tooltip a:link {
     color: var(--stash-checker-color-text);
 }
+
 .stashChecker.tooltip a:visited {
     color: var(--stash-checker-color-link-visited);
 }
+
 .stashChecker.tooltip a:hover {
     color: var(--stash-checker-color-link-hover);
 }
+
 .stashChecker.tooltip a:active {
     color: var(--stash-checker-color-link-active);
 }
+
 .stashChecker.tooltip hr {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
